made changes to edit image when size of tagsList is 0

--- a/src/main/resources/templates/images/image.html
+++ b/src/main/resources/templates/images/image.html
@@ -47,7 +47,7 @@
 
         <ul class="list mt0 mb5 pl0">
             <li th:each="tag : ${tags}" class="dib">
-            <span class="f6 link dim ba ph3 pv2 mb2 dib black mr2" th:text="${tag.name}">Tag
+            <span class="f6 link dim ba ph3 pv2 mb2 dib black mr2" th:text="${tag.getName()}">Tag
                 name</span>
             </li>
         </ul>
